--- a/design/openpa_flat/stylesheets/app_2.css
+++ b/design/openpa_flat/stylesheets/app_2.css
@@ -818,7 +818,6 @@ body { font: 300 14px/21px 'Roboto', 'sans-serif'; background: #232830; letter-s
 .sub_menu_wrap ul.sub_menu li a { display: block; padding: 7.7px 20px; }
 .sub_menu_wrap .sub_menu-item { margin: 10px 0; width: 180px; }
 
-@media only screen and (max-width: 992px) { .sub_menu_wrap.items-6 { left: -180px; } }
 #menu_button { background: #428944; padding: 7px 10px; width: 60px; }
 #menu_button > span { display: block; height: 3px; background: #fff; margin: 6px 0; }
 #menu_button:hover, #menu_button.active { background: #34495e; color: #fff; }
@@ -906,7 +905,8 @@ body { font: 300 14px/21px 'Roboto', 'sans-serif'; background: #232830; letter-s
   .m_md_bottom_5 { margin-bottom: 5px; }
   .m_md_bottom_15 { margin-bottom: 15px; }
   [class*="animate_"]:not(#go_to_top) { -webkit-transform: translate(0px); -moz-transform: translate(0px); -o-transform: translate(0px); -ms-transform: translate(0px); transform: translate(0px); -webkit-animation: none; -moz-animation: none; -o-animation: none; -ms-animation: none; animation: none; opacity: 1; visibility: visible; } }
-@media only screen and (max-width: 992px) { h1 > b { line-height: 1em; }
+@media only screen and (max-width: 992px) { .sub_menu_wrap.items-6 { left: -180px; }
+  h1 > b { line-height: 1em; }
   [role="navigation"] { position: relative; z-index: 192; }
   .p_sm_right_0 { padding-right: 0; }
   .w_sm_auto, .s_form_wrap { width: auto !important; }
@@ -934,7 +934,7 @@ body { font: 300 14px/21px 'Roboto', 'sans-serif'; background: #232830; letter-s
   .m_sm_left_10 { margin-left: 10px; }
   .mw_sm_0 { min-width: 0; }
   .popup { width: 750px; } }
-@media only screen and (min-width: 768px) { .sub_menu_wrap.items-2 { width: 380px; }
+@media only screen and (min-width: 992px) { .sub_menu_wrap.items-2 { width: 380px; }
   .sub_menu_wrap.items-3 { width: 560px; }
   .sub_menu_wrap.items-4 { width: 740px; }
   .sub_menu_wrap.items-5 { width: 920px; }
